files/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  ports:
  - name: web
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nginx
