files/route.yaml
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  labels:
    app: nginx
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: nginx-service
